force-app/main/default/objects/RelacionObra__c/RelacionObra__c.object-meta.xml
<CustomObject>
    <label>Relación Obra</label>
    <nameField>
        <label>Nombre de la Obra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relación  Obra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>