force-app/main/default/objects/RelacionObra__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>IF( Cuenta__r.IsPersonAccount = true, Cuenta__r.FirstName + &apos; &apos; +Cuenta__r.LastName, Cuenta__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de la Cuenta</label>
    <type>Text</type>
</CustomField>