force-app/main/default/objects/RelacionObra__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañía</label>
    <referenceTo>compania__c</referenceTo>
    <relationshipLabel>Relación  Obra</relationshipLabel>
    <relationshipName>Relaci_n_Obra</relationshipName>
    <type>Lookup</type>
</CustomField>