force-app/main/default/objects/RelacionObra__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relación  Obra</relationshipLabel>
    <relationshipName>RelacionIntaco</relationshipName>
    <type>Lookup</type>
</CustomField>