force-app/main/default/objects/RelacionObra__c/fields/Estado_obra__c.field-meta.xml
<CustomField>
    <fullName>Estado_obra__c</fullName>
    <formula>CASE( Obra__r.EstadoObra__c ,
  &quot;Levantamiento / Validación de Información&quot;, &quot;Estado: Levantamiento / Validación de Información&quot;,
  &quot;Detección&quot;, &quot;Estado: Detección&quot;,
  &quot;Estimación&quot;, &quot;Estado: Estimación&quot;,
  &quot;En Proceso&quot;, &quot;Estado: En Proceso&quot;,
  &quot;Ejecutada&quot;, &quot;Estado: Ejecutada&quot;,
  &quot;Cancelada&quot;, &quot;Estado: Cancelada&quot;,
  &quot;Otros&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado obra</label>
    <type>Text</type>
</CustomField>