force-app/main/default/objects/RelacionObra__c/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <formula>Prospecto__r.FirstName + &apos; &apos; + Prospecto__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Prospecto</label>
    <type>Text</type>
</CustomField>