force-app/main/default/objects/RelacionObra__c/fields/Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Cuenta__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Relación  Obra</relationshipLabel>
    <relationshipName>RelacionIntaco</relationshipName>
    <type>Lookup</type>
</CustomField>