force-app/main/default/objects/RelacionObra__c/fields/Relacion__c.field-meta.xml
<CustomField>
    <fullName>Relacion__c</fullName>
    <formula>IF( Cuenta__c = null, LeadName__c, AccountName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relación</label>
    <type>Text</type>
</CustomField>