force-app/main/default/objects/RelacionObra__c/fields/TipoRelacion__c.field-meta.xml
<CustomField>
    <fullName>TipoRelacion__c</fullName>
    <formula>IF( Cuenta__c = null, &apos;Prospecto&apos;, &apos;Cuenta&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Relacion</label>
    <type>Text</type>
</CustomField>