force-app/main/default/objects/RelacionObra__c/validationRules/CuentaInvalida.validationRule-meta.xml
<ValidationRule>
    <fullName>CuentaInvalida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Cuenta__r.companias__c &lt;&gt; Obra__r.Compania__c,
Cuenta__c  &lt;&gt; NULL 
)</errorConditionFormula>
    <errorMessage>La compañía de la cuenta no coincide con la compañía de la obra</errorMessage>
</ValidationRule>