force-app/main/default/objects/RelacionObra__c/validationRules/RelacionInvalida.validationRule-meta.xml
<ValidationRule>
    <fullName>RelacionInvalida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Cuenta__c  &lt;&gt; NULL,
  Prospecto__c  &lt;&gt; NULL
)</errorConditionFormula>
    <errorMessage>No puedes añadir un prospecto y una cuenta al mismo registro.</errorMessage>
</ValidationRule>